fixes for suggestion list

--- a/src/css/ProductDetail.css
+++ b/src/css/ProductDetail.css
@@ -39,6 +39,10 @@ img.product-image {
   text-overflow: ellipsis;
 }
 
+.detail-container .row .row-body{
+  cursor: default;
+}
+
 @media(max-width: 600px){
   .detail-container {
     max-width: 34rem;
